scrollbar profile page fixed

--- a/orfeus/src/views/accountProfile/Account.module.css
+++ b/orfeus/src/views/accountProfile/Account.module.css
@@ -2,5 +2,7 @@
   margin-top: '20%';
 }
 .outlet {
-  height: 100vh;
+  height: 74vh;
 }
+
+
